objects/Facility__c.object
<CustomObject>
    <fields>
        <fullName>WCA_CAPA_Not_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WCA CAPA Not Requested</description>
        <inlineHelpText>WCA CAPA Not Requested</inlineHelpText>
        <label>WCA CAPA Not Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WCA_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WCA Compliant</description>
        <inlineHelpText>Audit Group = ANNUAL WCA and
Facility Status = ACTIVE and
Audit Date  &gt;=TODAY()-365</inlineHelpText>
        <label>WCA Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WCA_Due_for_new_listing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WCA Due for new listing</description>
        <inlineHelpText>Audit Group = ANNUAL WCA and
Factory Status  = ACTIVE and
Audit Date = BLANK</inlineHelpText>
        <label>WCA Due for new listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WCA_Greenlist_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WCA Greenlist Criteria</description>
        <inlineHelpText>WCA Greenlist Criteria</inlineHelpText>
        <label>WCA Greenlist Criteria</label>
        <type>Checkbox</type>
    </fields>
    <label>Facility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Facility_Number__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Facility_Status__c</columns>
        <columns>Green_List_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>